--- a/Depo/Depo/App/LaunchScreen.storyboard
+++ b/Depo/Depo/App/LaunchScreen.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
     <device id="retina5_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -16,24 +16,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Background" translatesAutoresizingMaskIntoConstraints="NO" id="ecH-D9-HgV">
+                            <imageView clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="ecH-D9-HgV">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="LaunchImageLogo" translatesAutoresizingMaskIntoConstraints="NO" id="TOf-6H-Klj">
-                                <rect key="frame" x="142" y="333.66666666666669" width="130" height="129"/>
-                            </imageView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="KeP-Sm-Z8a"/>
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="TOf-6H-Klj" firstAttribute="width" secondItem="ecH-D9-HgV" secondAttribute="height" multiplier="65:368" id="0ik-01-dSs"/>
                             <constraint firstItem="ecH-D9-HgV" firstAttribute="leading" secondItem="KeP-Sm-Z8a" secondAttribute="leading" id="0x8-gb-7DY"/>
-                            <constraint firstItem="TOf-6H-Klj" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" constant="30" id="5jv-Re-DNz"/>
-                            <constraint firstItem="TOf-6H-Klj" firstAttribute="centerX" secondItem="KeP-Sm-Z8a" secondAttribute="centerX" id="M4c-d6-VRf"/>
                             <constraint firstItem="KeP-Sm-Z8a" firstAttribute="trailing" secondItem="ecH-D9-HgV" secondAttribute="trailing" id="WIp-kq-C4c"/>
                             <constraint firstAttribute="bottom" secondItem="ecH-D9-HgV" secondAttribute="bottom" id="XOy-SY-70G"/>
                             <constraint firstItem="ecH-D9-HgV" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="pMy-Rz-W55"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="KeP-Sm-Z8a"/>
                     </view>
                     <nil key="simulatedStatusBarMetrics"/>
                     <nil key="simulatedTopBarMetrics"/>
@@ -45,7 +39,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Background" width="375" height="667"/>
-        <image name="LaunchImageLogo" width="130" height="129"/>
+        <image name="launchScreenBackground" width="1025" height="2001"/>
     </resources>
 </document>
