--- a/Depo/Depo/Presentation/SubViews/PremiumView/PremiumHeaderView/PremiumHeaderView.xib
+++ b/Depo/Depo/Presentation/SubViews/PremiumView/PremiumHeaderView/PremiumHeaderView.xib
@@ -39,10 +39,13 @@
                 </stackView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eqA-pM-aag" customClass="GradientPremiumButton" customModule="Billo" customModuleProvider="target">
                     <rect key="frame" x="70" y="150.5" width="285" height="45"/>
+                    <color key="backgroundColor" name="button"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="45" id="PgF-1Q-ewL"/>
                     </constraints>
-                    <state key="normal" title="Become premium member"/>
+                    <state key="normal">
+                        <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </state>
                     <connections>
                         <action selector="onBecomePrepiumTap:" destination="-1" eventType="touchUpInside" id="OaJ-WM-1u7"/>
                     </connections>
@@ -95,6 +98,9 @@
     </objects>
     <resources>
         <image name="popupPremium" width="66" height="66"/>
+        <namedColor name="button">
+            <color red="0.019607843137254902" green="0.17647058823529413" blue="0.2627450980392157" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
