LB-2473 button is changed

--- a/Depo/Depo/Presentation/UserStories/Others/PhotoVideoDetail/View/PhotoVideoDetailCell/PhotoVideoDetailCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PhotoVideoDetail/View/PhotoVideoDetailCell/PhotoVideoDetailCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,7 +32,7 @@
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="slB-Qr-paR">
                         <rect key="frame" x="0.0" y="0.0" width="269" height="250"/>
-                        <state key="normal" image="playVideo"/>
+                        <state key="normal" image="iconPlay"/>
                         <connections>
                             <action selector="onPlayVideoButton" destination="gTV-IL-0wX" eventType="touchUpInside" id="eED-3r-bCN"/>
                         </connections>
@@ -65,6 +65,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="playVideo" width="32" height="32"/>
+        <image name="iconPlay" width="25" height="25"/>
     </resources>
 </document>
