--- a/Depo/Depo/Presentation/UserStories/Others/VerifyEmailPopUp/EmailVerifiedPopUp.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/VerifyEmailPopUp/EmailVerifiedPopUp.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina5_9" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -20,31 +20,30 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+            <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8v4-Yt-DA0">
-                    <rect key="frame" x="64.666666666666686" y="317" width="246" height="188"/>
+                    <rect key="frame" x="12" y="707" width="404" height="219"/>
                     <subviews>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" placeholderIntrinsicWidth="70" placeholderIntrinsicHeight="70" translatesAutoresizingMaskIntoConstraints="NO" id="Aeq-zb-enP">
-                            <rect key="frame" x="96.333333333333329" y="16" width="57.999999999999986" height="42"/>
+                            <rect key="frame" x="181" y="16" width="50" height="50"/>
                             <color key="tintColor" red="0.20000000000000001" green="0.80000000000000004" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
-                                <constraint firstAttribute="width" constant="58" id="Sv0-Qo-Qss"/>
-                                <constraint firstAttribute="height" constant="42" id="YBE-Xd-7cy"/>
+                                <constraint firstAttribute="width" constant="50" id="Sv0-Qo-Qss"/>
+                                <constraint firstAttribute="height" constant="50" id="YBE-Xd-7cy"/>
                             </constraints>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hrj-VD-UW1">
-                            <rect key="frame" x="101.99999999999999" y="81" width="42.000000000000014" height="21"/>
+                            <rect key="frame" x="181" y="89" width="42" height="21"/>
                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ys8-FY-2t9" customClass="RoundedButton" customModule="Billo" customModuleProvider="target">
-                            <rect key="frame" x="50" y="124" width="146" height="44"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ys8-FY-2t9" customClass="DarkBlueButton" customModule="Billo" customModuleProvider="target">
+                            <rect key="frame" x="16" y="132" width="372" height="45"/>
                             <constraints>
-                                <constraint firstAttribute="height" constant="44" id="GBW-Ky-eYM"/>
-                                <constraint firstAttribute="width" priority="750" constant="146" id="H7Z-Er-cyR"/>
+                                <constraint firstAttribute="height" constant="45" id="GBW-Ky-eYM"/>
                             </constraints>
                             <state key="normal" title="Button"/>
                             <connections>
@@ -55,12 +54,13 @@
                     <color key="backgroundColor" name="secondaryBackground"/>
                     <constraints>
                         <constraint firstItem="hrj-VD-UW1" firstAttribute="top" secondItem="Aeq-zb-enP" secondAttribute="bottom" constant="23" id="5pj-tM-fOk"/>
-                        <constraint firstItem="Ys8-FY-2t9" firstAttribute="leading" secondItem="8v4-Yt-DA0" secondAttribute="leading" constant="50" id="63A-Q2-e5t"/>
                         <constraint firstItem="Aeq-zb-enP" firstAttribute="top" secondItem="8v4-Yt-DA0" secondAttribute="top" constant="16" id="Bv7-x3-oU4"/>
+                        <constraint firstAttribute="trailing" secondItem="Ys8-FY-2t9" secondAttribute="trailing" constant="16" id="ElU-ac-6uN"/>
                         <constraint firstItem="Ys8-FY-2t9" firstAttribute="top" secondItem="hrj-VD-UW1" secondAttribute="bottom" constant="22" id="Jm7-IE-uX7"/>
                         <constraint firstItem="Aeq-zb-enP" firstAttribute="centerX" secondItem="8v4-Yt-DA0" secondAttribute="centerX" multiplier="1.02" id="Pkl-D9-kdQ"/>
+                        <constraint firstItem="Ys8-FY-2t9" firstAttribute="leading" secondItem="8v4-Yt-DA0" secondAttribute="leading" constant="16" id="TJr-od-mZ8"/>
                         <constraint firstItem="Ys8-FY-2t9" firstAttribute="centerX" secondItem="8v4-Yt-DA0" secondAttribute="centerX" id="jws-Vf-KUL"/>
-                        <constraint firstAttribute="bottom" secondItem="Ys8-FY-2t9" secondAttribute="bottom" constant="20" id="mr8-6e-e4k"/>
+                        <constraint firstAttribute="bottom" secondItem="Ys8-FY-2t9" secondAttribute="bottom" constant="42" id="mr8-6e-e4k"/>
                         <constraint firstItem="hrj-VD-UW1" firstAttribute="centerX" secondItem="8v4-Yt-DA0" secondAttribute="centerX" id="pLS-SY-eAA"/>
                         <constraint firstItem="hrj-VD-UW1" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8v4-Yt-DA0" secondAttribute="leading" constant="24" id="tQQ-J5-vmb"/>
                     </constraints>
@@ -69,9 +69,10 @@
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
-                <constraint firstItem="8v4-Yt-DA0" firstAttribute="centerY" secondItem="vUN-kp-3ea" secondAttribute="centerY" id="0a6-8z-cVa"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="8v4-Yt-DA0" secondAttribute="trailing" constant="12" id="Org-KP-Jxe"/>
+                <constraint firstAttribute="bottom" secondItem="8v4-Yt-DA0" secondAttribute="bottom" id="YEg-dw-a7R"/>
                 <constraint firstItem="8v4-Yt-DA0" firstAttribute="centerX" secondItem="vUN-kp-3ea" secondAttribute="centerX" id="bW3-xh-jbV"/>
-                <constraint firstItem="8v4-Yt-DA0" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="32" id="ggL-7o-Ev4"/>
+                <constraint firstItem="8v4-Yt-DA0" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="12" id="mh1-9f-CaZ"/>
             </constraints>
             <point key="canvasLocation" x="138" y="132"/>
         </view>
