--- a/Depo/Depo/Presentation/UserStories/Start/Initializing/InitializingViewController.xib
+++ b/Depo/Depo/Presentation/UserStories/Start/Initializing/InitializingViewController.xib
@@ -17,7 +17,7 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenBackground" translatesAutoresizingMaskIntoConstraints="NO" id="ocK-8H-9Wd">
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchScreenBackg" translatesAutoresizingMaskIntoConstraints="NO" id="ocK-8H-9Wd">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                 </imageView>
             </subviews>
@@ -32,6 +32,6 @@
         </view>
     </objects>
     <resources>
-        <image name="launchScreenBackground" width="1025" height="2001"/>
+        <image name="launchScreenBackg" width="1025" height="2001"/>
     </resources>
 </document>
