--- a/Depo/Depo/Presentation/UserStories/Others/PhotoVideoDetail/View/PhotoVideoDetailCell/PhotoVideoDetailCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PhotoVideoDetail/View/PhotoVideoDetailCell/PhotoVideoDetailCell.xib
@@ -24,15 +24,15 @@
                         <rect key="frame" x="124.5" y="115" width="20" height="20"/>
                     </activityIndicatorView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6Om-pX-vip">
-                        <rect key="frame" x="109.5" y="100" width="50" height="50"/>
+                        <rect key="frame" x="114.5" y="105" width="40" height="40"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="50" id="HwW-xg-zhF"/>
-                            <constraint firstAttribute="width" constant="50" id="nwI-2K-HVS"/>
+                            <constraint firstAttribute="height" constant="40" id="HwW-xg-zhF"/>
+                            <constraint firstAttribute="width" constant="40" id="nwI-2K-HVS"/>
                         </constraints>
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="slB-Qr-paR">
                         <rect key="frame" x="0.0" y="0.0" width="269" height="250"/>
-                        <state key="normal" image="iconPlay"/>
+                        <state key="normal" image="iconPlayBlue40x40"/>
                         <connections>
                             <action selector="onPlayVideoButton" destination="gTV-IL-0wX" eventType="touchUpInside" id="eED-3r-bCN"/>
                         </connections>
@@ -65,6 +65,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="iconPlay" width="25" height="25"/>
+        <image name="iconPlayBlue40x40" width="40" height="40"/>
     </resources>
 </document>
