--- a/Depo/Depo/Presentation/UserStories/Settings/ActivityTimeline/View/Views/ActivityTimelineFileCell/ActivityTimelineFileCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Settings/ActivityTimeline/View/Views/ActivityTimelineFileCell/ActivityTimelineFileCell.xib
@@ -1,30 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13196" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ActivityTimelineFileCell" customModule="Depo_LifeTech" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="ActivityTimelineFileCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BQD-Wb-aFX">
-                        <rect key="frame" x="184" y="11" width="128" height="21"/>
+                        <rect key="frame" x="184" y="11.5" width="128" height="21"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fileIconDoc" translatesAutoresizingMaskIntoConstraints="NO" id="3em-i3-frX">
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconFileDoc" translatesAutoresizingMaskIntoConstraints="NO" id="3em-i3-frX">
                         <rect key="frame" x="158" y="13" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="18" id="FmL-RY-aA6"/>
@@ -46,9 +44,10 @@
                 <outlet property="fileImageView" destination="3em-i3-frX" id="Jv9-6r-K8a"/>
                 <outlet property="fileNameLabel" destination="BQD-Wb-aFX" id="X5h-sT-isV"/>
             </connections>
+            <point key="canvasLocation" x="139" y="104"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="fileIconDoc" width="24" height="28"/>
+        <image name="iconFileDoc" width="24" height="24"/>
     </resources>
 </document>
