--- a/Depo/Depo/Presentation/UserStories/Others/PhotoVideoDetail/View/PhotoVideoDetailCell/PhotoVideoDetailCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Others/PhotoVideoDetail/View/PhotoVideoDetailCell/PhotoVideoDetailCell.xib
@@ -32,7 +32,7 @@
                     </imageView>
                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="slB-Qr-paR">
                         <rect key="frame" x="0.0" y="0.0" width="269" height="250"/>
-                        <state key="normal" image="iconPlayBlue40x40"/>
+                        <state key="normal" image="iconPlayBlue40"/>
                         <connections>
                             <action selector="onPlayVideoButton" destination="gTV-IL-0wX" eventType="touchUpInside" id="eED-3r-bCN"/>
                         </connections>
@@ -65,6 +65,6 @@
         </collectionViewCell>
     </objects>
     <resources>
-        <image name="iconPlayBlue40x40" width="40" height="40"/>
+        <image name="iconPlayBlue40" width="40" height="40"/>
     </resources>
 </document>
