--- a/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouCollectionViewCell.xib
+++ b/Depo/Depo/Presentation/UserStories/For You/View/Cells/ForYouCollectionViewCell.xib
@@ -17,7 +17,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eh9-cA-xIe">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="eh9-cA-xIe" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
                         <rect key="frame" x="0.0" y="0.0" width="140" height="140"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="140" id="SfI-rL-BWg"/>
