--- a/Depo/Depo/Presentation/UserStories/Grid/HiddenPhotos/Subviews/AlbumCell.xib
+++ b/Depo/Depo/Presentation/UserStories/Grid/HiddenPhotos/Subviews/AlbumCell.xib
@@ -24,6 +24,13 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="871-ba-0El" customClass="LoadingImageView" customModule="Billo" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="127" height="127"/>
                             </imageView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="iconAlbum" translatesAutoresizingMaskIntoConstraints="NO" id="mZL-5o-rgI" userLabel="EmptyImage">
+                                <rect key="frame" x="43.5" y="43.5" width="40" height="40"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="VhA-8a-oDo"/>
+                                    <constraint firstAttribute="width" constant="40" id="fiu-mA-csk"/>
+                                </constraints>
+                            </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="6vk-6n-qQs">
                                 <rect key="frame" x="98" y="4" width="25" height="25"/>
                                 <constraints>
@@ -38,6 +45,8 @@
                             <constraint firstAttribute="trailing" secondItem="6vk-6n-qQs" secondAttribute="trailing" constant="4" id="BGV-I4-4bf"/>
                             <constraint firstItem="871-ba-0El" firstAttribute="top" secondItem="chQ-bu-QOK" secondAttribute="top" id="Ca3-Ix-R7K"/>
                             <constraint firstAttribute="width" secondItem="chQ-bu-QOK" secondAttribute="height" multiplier="1:1" id="KIk-Cc-F0r"/>
+                            <constraint firstItem="mZL-5o-rgI" firstAttribute="centerY" secondItem="chQ-bu-QOK" secondAttribute="centerY" id="Zeo-uC-QEP"/>
+                            <constraint firstItem="mZL-5o-rgI" firstAttribute="centerX" secondItem="chQ-bu-QOK" secondAttribute="centerX" id="jh1-wk-q2p"/>
                             <constraint firstAttribute="trailing" secondItem="871-ba-0El" secondAttribute="trailing" id="sDC-FM-pdM"/>
                             <constraint firstItem="871-ba-0El" firstAttribute="leading" secondItem="chQ-bu-QOK" secondAttribute="leading" id="uDB-am-zvb"/>
                             <constraint firstItem="6vk-6n-qQs" firstAttribute="top" secondItem="chQ-bu-QOK" secondAttribute="top" constant="4" id="x2S-v7-ehi"/>
@@ -67,6 +76,7 @@
             </constraints>
             <size key="customSize" width="167" height="231"/>
             <connections>
+                <outlet property="emptyImage" destination="mZL-5o-rgI" id="dJE-Q0-Ue2"/>
                 <outlet property="selectionIcon" destination="6vk-6n-qQs" id="MVP-bA-ItP"/>
                 <outlet property="thumbnail" destination="871-ba-0El" id="wqv-3D-3YR"/>
                 <outlet property="thumbnailsContainer" destination="chQ-bu-QOK" id="Cgm-rj-Hgb"/>
@@ -76,6 +86,7 @@
         </collectionViewCell>
     </objects>
     <resources>
+        <image name="iconAlbum" width="24" height="24"/>
         <namedColor name="primaryBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
